fix: Update css for design compliance and responsive display on small screens

--- a/src/components/common/QuestionnaireLabel/ExpandedModal/NetPromoter.module.css
+++ b/src/components/common/QuestionnaireLabel/ExpandedModal/NetPromoter.module.css
@@ -3,11 +3,13 @@
 .container {
   position: fixed;
   top: 50%;
-  right: 0;
+  right: 2.5rem;
   transform: translateY(-50%);
   z-index: 9;
-  height: 241px;
-  width: 367px;
+  height: 100%;
+  width: 100%;
+  max-width: 367px;
+  max-height: 241px;
   background-color: #fff;
   border: 4px solid main-yellow;
   overflow: hidden;
@@ -15,7 +17,6 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin-right: 2.5rem;
   box-shadow: 0px 0px 19px 0px rgba(0, 0, 0, 0.2);
 }
 
@@ -95,7 +96,8 @@
 
 .range {
   position: relative;
-  width: 311px;
+  width: 100%;
+  max-width: 311px;
   margin-top: -20px;
 }
 
@@ -176,14 +178,15 @@
   }
 
   .container {
-    right: 0;
-    left: 0;
-    margin: 0 7px;
-    width: auto;
+    top: 50%;
+    left: 50%;
+    right: auto;
+    margin: 0;
+    transform: translate(-50%, -50%);
   }
 }
 
-@media (max-width: 360px) {
+@media (max-width: 374px) {
   .question span {
     font-size: 12px;
   }
@@ -191,9 +194,7 @@
   .nextStepContainer img {
     left: -24px;
   }
-}
 
-@media (max-width: 280px) {
   .nextStepContainer img {
     display: none;
   }
